# BrickGame

./: Makefile  README.md  requirements.txt
brick_game/: library_specification.h
brick_game/race/: cars.py  game.py  lib_race.py
brick_game/race_client/: race_client.cpp  race_client.hpp
brick_game/server/: components.py  game_router.py  main.py
brick_game/snake/: snake_controller.hpp  snake_lib.cpp  snake_model.cpp  snake_model.hpp  snake_objects.hpp
brick_game/tetris/: tetris_lib.c  tetris_lib.h  tetris_objects.h
brick_game/web_gui/: .prettierrc  index.html  main.js  styles.css
brick_game/web_gui/src/: config.js  game-board.js  next-board.js  tile.js  update-current-state.js  user-input.js  utils.js
gui/cli/: cli_view.c  cli_view.h  main.c
gui/desktop/: CMakeLists.txt  game_desktop_view.cpp  game_desktop_view.hpp  game_desktop_view.ui  main.cpp  menu_desktop_view.cpp  menu_desktop_view.hpp  menu_desktop_view.ui
tests/: race_tests.py
